# geo-dataset-builder

./: .gitignore  GRID_GENERATION.md  calculate_bbox.py  conf.yaml  conf_grid_country_example.yaml  conf_grid_example.yaml  doc  pyproject.toml  run.sh
src/: consumer.py  main copy 2.py  main copy.py  main.py  queue_manager.py
src/annotation/: annotation.py  grid_generator.py  grid_source.py  source.py
src/dataset_modality/: __init__.py  factory.py  tms.py
src/output_writer/: __init__.py  base_writer.py  hdf5_writer.py  tif_writer.py
